added images and styles for index.html

--- a/source/index.html
+++ b/source/index.html
@@ -7,143 +7,168 @@
     <title>Sedona</title>
   </head>
   <body class="page">
-    <header class="page__header">
-      <nav class="page__header-navigation">
-        <picture>
-          <source media="(min-width: 1280px)" srcset="img/main-logo-desktop@1x.png 1x, img/main-logo-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/main-logo-tablet@1x.png 1x, img/main-logo-tablet@2x.png 2x">
-          <img class="header__logo" src="../img/main-logo-mobile@1x.png" srcset="../img/main-logo-mobile@2x.png" alt="Sedona's logotype">
-        </picture>
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a class="item__link">Main</a>
+    <header class="page-header container">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/main-logo-desktop@1x.png 1x, img/main-logo-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/main-logo-tablet@1x.png 1x, img/main-logo-tablet@2x.png 2x">
+        <img class="header-logo" src="img/main-logo-mobile@1x.png" srcset="img/main-logo-mobile@2x.png" alt="Sedona's logotype">
+      </picture>
+      <button class="page-header__main-navigation__button-open" type="button">
+        <span class="visually-hidden">Open menu</span>
+      </button>
+      <nav class="page-header__main-navigation main-navigation--closed main-navigation--nojs">
+        <ul class="page-header__main-navigation__list">
+          <li class="page-header__main-navigation__item">
+            <a class="page-header__main-navigation__item__link">Main</a>
           </li>
-          <li class="navigation__item">
-            <a class="item__link" href="catalog.html">Gallery</a>
+          <li class="page-header__main-navigation__item">
+            <a class="page-header__main-navigation__item__link" href="catalog.html">Gallery</a>
           </li>
-          <li class="navigation__item">
-            <a class="item__link" href="form.html">Feedback form</a>
+          <li class="page-header__main-navigation__item--space"></li>
+          <li class="page-header__main-navigation__item">
+            <a class="page-header__main-navigation__item__link" href="form.html">Feedback form</a>
           </li>
-          <li class="navigation__item">
-            <a class="item__link" href="https:htmlacademy.ru">HTML Academy</a>
+          <li class="page-header__main-navigation__item">
+            <a class="page-header__main-navigation__item__link" href="https:htmlacademy.ru">HTML Academy</a>
           </li>
         </ul>
-        <button class="navigation__button-close" type="button"></button>
+        <button class="page-header__main-navigation__button-close" type="button">
+          <span class="visually-hidden">Close menu</span>
+        </button>
       </nav>
     </header>
-    <main class="page__main">
-      <section class="main__offer">
+    <main class="page-main">
+      <section class="main-offer">
         <h1 class="visually-hidden">Web-service for booking hotels in Sedona city</h1>
-        <div class="main__offer-wrapper">
-          <h2>Sedona is a small city in Arizona that deserve more!</h2>
+        <div class="main-offer__slogan__wrapper">
           <picture>
-            <source media="(min-width: 768px)" srcset="../img/main-slogan-tablet@1x.png 1x, ../img/main-slogan-tablet@2x.png 2x">
-            <img class="main__slogan" src="../img/main-slogan-mobile@1x.png" srcset="../img/main-slogan-mobile@2x.png" alt="">
+            <source media="(min-width: 768px)" srcset="/img/main-slogan-tablet@1x.png 1x, /img/main-slogan-tablet@2x.png 2x">
+            <img class="main-offer__slogan" src="/img/main-slogan-mobile@1x.png" srcset="/img/main-slogan-mobile@2x.png" alt="">
           </picture>
-          <p class="main__offer-description">
+          <svg class="main-offer--decore" width="100%" height="57">
+            <use href="/img/sprite.svg"></use>
+          </svg>
+        </div>
+        <div class="main-offer__wrapper">
+          <h2 class="main-offer__title">Sedona is a small city in Arizona that deserve more!</h2>
+          <p class="main-offer__description">
             Let's lok 5 reasons, why Sedona is better than the Grand Canyon!
           </p>
         </div>
       </section>
-      <section class="main__features">
-        <div class="main__features-wrapper">
-          <ul class="features__list">
-            <li class="features__item">
-              <b class="features__caption">Really city</b>
-              <span class="features__decor">— №1 —</span>
-              <p class="features__description">
-                Sedona is not an attraction for tourists, life going here
-              </p>
+      <section class="main-features">
+        <div class="main-features__wrapper">
+          <ul class="main-features__list">
+            <li class="main-features__item main-features__item--background-city-photo">
+              <div class="main-features__item__text-wrapper">
+                <b class="main-features__caption">Really city</b>
+                <span class="main-features__decor">— №1 —</span>
+                <p class="main-features__description">
+                  Sedona is not an attraction for tourists, life going here
+                </p>
+              </div>
+              <picture>
+                <source media="(min-width: 1200px)" srcset="/img/city-photo-desktop@1x.jpg 1x, /img/city-photo-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="/img/city-photo-tablet@1x.jpg 1x, /img/city-photo-tablet@2x.jpg 2x">
+                <img class="main-features__city-image" src="/img/city-photo-mobile@1x.jpg" srcset="/img/city-photo-mobile@2x.jpg" alt="Sedona's city photo">
+              </picture>
             </li>
-            <li class="features__item">
-              <b class="features__caption">House</b>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--additional-item main-features__item--house-logo">
+              <b class="main-features__caption">House</b>
+              <p class="main-features__description main-features__description--left-side-position">
                 We recommend living in a real motel, everything is like in the movies!
               </p>
             </li>
-            <li class="features__item">
-              <b class="features__caption">Food</b>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--additional-item main-features__item--food-logo">
+              <b class="main-features__caption">Food</b>
+              <p class="main-features__description main-features__description--left-side-position">
                 Always order a branded burger, You will not be disappointed!
               </p>
             </li>
-            <li class="features__item">
-              <b class="features__caption">Souvenirs</b>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--additional-item main-features__item--souvenirs-logo">
+              <b class="main-features__caption">Souvenirs</b>
+              <p class="main-features__description main-features__description--left-side-position">
                 Not only Chinese, but also local production!
               </p>
             </li>
-            <li class="features__item">
-              <b class="features__caption">There is devil bridge there</b>
-              <span class="features__decor">— №2 —</span>
-              <p class="features__description">
-                Yes, you can walk on it! If you dare, of course
-              </p>
+            <li class="main-features__item main-features__item--background-city-photo">
+              <div class="main-features__item__text-wrapper main-features__item__text-wrapper--picture-position">
+                <b class="main-features__caption">There is devil bridge there</b>
+                <span class="main-features__decor">— №2 —</span>
+                <p class="main-features__description">
+                  Yes, you can walk on it! If you dare, of course
+                </p>
+              </div>
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/bridge-photo-desktop@1x.jpg 1x, img/bridge-photo-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/bridge-photo-tablet@1x.jpg 1x, img/bridge-photo-tablet@2x.jpg 2x">
+                <img class="main-features__city-image" src="img/bridge-photo-mobile@1x.jpg" srcset="img/bridge-photo-mobile@2x.jpg" alt="Devil's bridge photo">
+              </picture>
             </li>
-            <li class="features__item">
-              <b class="features__caption">Small area</b>
-              <span class="features__decor">— №3 —</span>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--decor-line">
+              <b class="main-features__caption main-features__caption--position">Small area</b>
+              <span class="main-features__decor main-features__decor--position">— №3 —</span>
+              <p class="main-features__description main-features__description--position">
                 All the interesting places are very close
               </p>
             </li>
-            <li class="features__item">
-              <b class="features__caption">Beautiful road</b>
-              <span class="features__decor">— №4 —</span>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--decor-line">
+              <b class="main-features__caption main-features__caption--position">Beautiful road</b>
+              <span class="main-features__decor main-features__decor--position">— №4 —</span>
+              <p class="main-features__description main-features__description--position">
                 Going to Sedona from Las Vegas is not boring at all!
               </p>
             </li>
-            <li class="features__item">
-              <b class="features__caption">Few tourists</b>
-              <span class="features__decor">— №5 —</span>
-              <p class="features__description">
+            <li class="main-features__item main-features__item--decor-line">
+              <b class="main-features__caption main-features__caption--position">Few tourists</b>
+              <span class="main-features__decor main-features__decor--position">— №5 —</span>
+              <p class="main-features__description main-features__description--position">
                 Most of them go to the Grand Canyon and crowd there
               </p>
             </li>
           </ul>
         </div>
       </section>
-      <section class="main__modal-search">
-        <div class="modal__search-wrapper">
-          <h2 class="modal__search-title visually-hidden">Form for booking</h2>
-          <span class="modal__search-slogan">Interesting?</span>
-          <p class="modal__search-description">
+      <section class="main-modal-search">
+        <div class="main-modal-search__search-wrapper">
+          <h2 class="main-modal-search__search-title visually-hidden">Form for booking</h2>
+          <span class="main-modal-search__search-slogan">Interesting?</span>
+          <p class="main-modal-search__search-description">
             Specify the estimated dates of your trip, and we will show you the best hotel deals in Sedona
           </p>
-          <button class="modal__search-button" type="button">Find hotel</button>
-          <div class="modal__search-map">
-            <h2 class="visually-hidden">Как до нас добраться</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462057.4134430642!2d-111.86765825890201!3d34.777645103840655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1642448949141!5m2!1sru!2sru" width="1200" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-          </div>
+          <button class="main-modal-search__search-button button" type="button">Find hotel</button>
+        </div>
+        <div class="main-modal-search__search-map">
+          <h2 class="visually-hidden">Как до нас добраться</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462057.4134430642!2d-111.86765825890201!3d34.777645103840655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1642448949141!5m2!1sru!2sru" width="100%" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </section>
     </main>
-    <footer class="page__footer">
-      <a class="footer__link">
+    <footer class="main-footer">
+      <a class="main-footer__link">
         <svg>
           <use></use>
         </svg>
       </a>
-      <ul class="footer__social-list">
-        <li class="social__item">
-          <a class="social__link" href="https:twitter.com">
+      <ul class="main-footer__social-list">
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:twitter.com">
             <span class="visually-hidden">twitter</span>
             <svg>
               <use></use>
             </svg>
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link" href="https:facebook.com">
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:facebook.com">
             <span class="visually-hidden">facebook</span>
             <svg>
               <use></use>
             </svg>
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link" href="https:youtube.com">
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:youtube.com">
             <span class="visually-hidden">youtube</span>
             <svg>
               <use></use>
@@ -151,7 +176,7 @@
           </a>
         </li>
       </ul>
-      <a href="https:htmlacademy.ru">
+      <a class="main-footer__developer" href="https:htmlacademy.ru">
         <span class="visually-hidden">HTML Academy</span>
         <svg>
           <use></use>
