--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,9 +9,10 @@
 <body class="page">
   <header class="page-header container">
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/main-logo-desktop@1x.png 1x, img/main-logo-desktop@2x.png 2x">
-        <source media="(min-width: 768px)" srcset="img/main-logo-tablet@1x.png 1x, img/main-logo-tablet@2x.png 2x">
-        <img class="header-logo" src="img/main-logo-mobile@1x.png" srcset="img/main-logo-mobile@2x.png" alt="Sedona's logotype">
+        <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-logo-desktop@1x.webp 1x, img/main-logo-desktop@2x.webp 2x" width="186" height="96">
+        <source type="image/webp" srcset="img/main-logo-mobile@1x.webp 1x, img/main-logo-mobile@2x.webp 2x" width="101" height="84">
+        <source media="(min-width: 1200px)" srcset="img/main-logo-desktop@1x.png 1x, img/main-logo-desktop@2x.png 2x" width="186" height="96">
+        <img class="header-logo" src="img/main-logo-mobile@1x.png" srcset="img/main-logo-mobile@2x.png" alt="Sedona's logotype" width="101" height="84">
       </picture>
       <button class="page-header__main-navigation__button-open" type="button">
         <span class="visually-hidden">Open menu</span>
@@ -19,10 +20,10 @@
       <nav class="page-header__main-navigation main-navigation--closed main-navigation--nojs">
         <ul class="page-header__main-navigation__list">
           <li class="page-header__main-navigation__item">
-            <a class="page-header__main-navigation__item__link">Main</a>
+            <a class="page-header__main-navigation__item__link" href="index.html">Main</a>
           </li>
           <li class="page-header__main-navigation__item">
-            <a class="page-header__main-navigation__item__link" href="catalog.html">Gallery</a>
+            <a class="page-header__main-navigation__item__link">Gallery</a>
           </li>
           <li class="page-header__main-navigation__item--space"></li>
           <li class="page-header__main-navigation__item">
@@ -42,8 +43,10 @@
         <h1 class="visually-hidden">Gallery</h1>
         <div class="main-gallery__offer">
           <picture>
-            <source media="(min-width: 768px)" srcset="/img/background-tablet-desktop-city-name@1x.png 1x, /img/background-tablet-desktop-city-name@2x.png 2x">
-            <img class="main-gallery-city-name" src="/img/background-city-name@1x.png" srcset="/img/background-city-name@2x.png" alt="City name">
+            <source type="image/webp" srcset="img/background-tablet-desktop-city-name@1x.webp 1x, img/background-tablet-desktop-city-name@2x.webp 2x">
+            <source type="image/webp" srcset="img/background-city-name@1x.webp 1x, img/background-city-name@2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/background-tablet-desktop-city-name@1x.png 1x, img/background-tablet-desktop-city-name@2x.png 2x">
+            <img class="main-gallery-city-name" src="img/background-city-name@1x.png" srcset="img/background-city-name@2x.png" alt="City name">
           </picture>
         </div>
         <div class="main-gallery__slogan">
@@ -53,76 +56,174 @@
         <ul class="main-gallery__list">
           <li class="main-gallery__item">
             <picture>
-              <source media="(min-width: 768px)" srcset="">
-              <img class="main-gallery__image" src="" alt="sunset photo">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/sunset-photo-desktop@1x.webp 1x, img/sunset-photo-desktop@1x.webp 2x" width="1200" height="400">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/sunset-photo-tablet@1x.webp 1x, img/sunset-photo-tablet@1x.webp 2x" width="648" height="400">
+              <source type="image/webp" srcset="img/sunset-photo-mobile@1x.webp 1x, img/sunset-photo-mobile@2x.webp 2x" width="280" height="280">
+              <source media="(min-width: 1200px)" srcset="img/sunset-photo-desktop@1x.jpg 1x, img/sunset-photo-desktop@2x.jpg 2x" width="1200" height="400">
+              <source media="(min-width: 768px)" srcset="img/sunset-photo-tablet@1x.jpg 1x, img/sunset-photo-tablet@2x.jpg 2x" width="648" height="400">
+              <img class="main-gallery__image main-gallery__image--size-position" src="img/sunset-photo-mobile@1x.jpg" srcset="img/sunset-photo-mobile@2x.jpg" alt="sunset photo" width="280" height="280">
             </picture>
-            <b class="main-gallery__item__caption">Native spaces</b>
-            <span class="main-gallery__item__description">Photo author: Boris</span>
-            <div class="main-gallery__item__likes-counter">
-              <button class="main-gallery__item__button" type="button">
-                <svg>
-                  <use></use>
-                </svg>
-              </button>
-              <span class="main-gallery__item__counter-value">1350</span>
+            <div class="main-gallery__item__image-description-wrapper main-gallery__item__image-description-wrapper--first-item-width">
+              <div class="main-gallery__item__text-wrapper">
+                <b class="main-gallery__item__caption">Native spaces</b>
+                <span class="main-gallery__item__description">Photo author: Boris</span>
+              </div>
+              <div class="main-gallery__item__likes-counter">
+                <button class="main-gallery__item__button" type="button">
+                  <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
+                    <use href="img/sprite.svg#like-icon"></use>
+                  </svg>
+                </button>
+                <span class="main-gallery__item__counter-value">1350</span>
+              </div>
             </div>
           </li>
           <li class="main-gallery__item">
             <picture>
-              <source media="(min-width: 768px)" srcset="">
-              <img class="main-gallery__image" src="" alt="sunset photo">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/vegetation-photo-desktop@1x.webp 1x, img/vegetation-photo-desktop@2x.webp 2x" width="400" height="267">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/vegetation-photo-tablet@1x.webp 1x, img/vegetation-photo-tablet@2x.webp 2x" width="324" height="267">
+              <source type="image/webp" srcset="img/vegetation-photo-mobile@1x.webp 1x, img/vegetation-photo-mobile@2x.webp 2x" width="280" height="280">
+              <source media="(min-width: 1200px)" srcset="img/vegetation-photo-desktop@1x.jpg 1x, img/vegetation-photo-desktop@2x.jpg 2x" width="400" height="267">
+              <source media="(min-width: 768px)" srcset="img/vegetation-photo-tablet@1x.jpg 1x, img/vegetation-photo-tablet@2x.jpg 2x" width="324" height="267">
+              <img class="main-gallery__image" src="img/vegetation-photo-mobile@1x.jpg" srcset="vegetation-photo-mobile@2x.jpg" alt="vegetation photo" width="280" height="280">
             </picture>
-            <b class="main-gallery__item__caption">Local vegetation</b>
-            <span class="main-gallery__item__description">Photo author: Sergey</span>
-            <div class="main-gallery__item__likes-counter">
-              <button class="main-gallery__item__button" type="button">
-                <svg>
-                  <use></use>
-                </svg>
-              </button>
-              <span class="main-gallery__item__counter-value">143</span>
+            <div class="main-gallery__item__image-description-wrapper main-gallery__item__image-description-wrapper--next-item-width">
+              <div class="main-gallery__item__text-wrapper">
+                <b class="main-gallery__item__caption">Local vegetation</b>
+                <span class="main-gallery__item__description">Photo author: Sergey</span>
+              </div>
+              <div class="main-gallery__item__likes-counter">
+                <button class="main-gallery__item__button" type="button">
+                  <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
+                    <use href="img/sprite.svg#like-icon"></use>
+                  </svg>
+                </button>
+                <span class="main-gallery__item__counter-value">143</span>
+              </div>
             </div>
           </li>
           <li class="main-gallery__item">
             <picture>
-              <source media="(min-width: 768px)" srcset="">
-              <img class="main-gallery__image" src="" alt="sunset photo">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/nature-photo-desktop@1x.webp 1x, img/nature-photo-desktop@2x.webp 2x" width="400" height="267">
+              <source type="image/webp" media="(min-width: 768px)" media="(min-width: 768px)" srcset="img/nature-photo-tablet@1x.webp 1x, img/nature-photo-tablet@2x.webp 2x" width="324" height="267">
+              <source type="image/webp" srcset="img/nature-photo-mobile@1x.webp 1x, img/nature-photo-mobile@2x.webp 2x" width="280" height="280">
+              <source media="(min-width: 1200px)" srcset="img/nature-photo-desktop@1x.jpg 1x, img/nature-photo-desktop@2x.jpg 2x" width="400" height="267">
+              <source media="(min-width: 768px)" srcset="img/nature-photo-tablet@1x.jpg 1x, img/nature-photo-tablet@2x.jpg 2x" width="324" height="267">
+              <img class="main-gallery__image" src="img/nature-photo-mobile@1x.jpg" srcset="img/nature-photo-mobile@2x.jpg" alt="nature photo" width="280" height="280">
             </picture>
-            <b class="main-gallery__item__caption">The road to the north</b>
-            <span class="main-gallery__item__description">Photo author: Petr</span>
-            <div class="main-gallery__item__likes-counter">
-              <button class="main-gallery__item__button" type="button">
-                <svg>
-                  <use></use>
-                </svg>
-              </button>
-              <span class="main-gallery__item__counter-value">96</span>
+            <div class="main-gallery__item__image-description-wrapper main-gallery__item__image-description-wrapper--dark-grey-background main-gallery__item__image-description-wrapper--next-item-width">
+              <div class="main-gallery__item__text-wrapper">
+                <b class="main-gallery__item__caption">The road to the north</b>
+                <span class="main-gallery__item__description">Photo author: Petr</span>
+              </div>
+              <div class="main-gallery__item__likes-counter">
+                <button class="main-gallery__item__button" type="button">
+                  <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
+                    <use href="img/sprite.svg#like-icon"></use>
+                  </svg>
+                </button>
+                <span class="main-gallery__item__counter-value">96</span>
+              </div>
             </div>
           </li>
           <li class="main-gallery__item">
             <picture>
-              <source media="(min-width: 768px)" srcset="">
-              <img class="main-gallery__image" src="" alt="sunset photo">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/devils-bridge-desktop-photo@1x.webp 1x, img/devils-bridge-desktop-photo@2x.webp 2x" width="400" height="267">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/devils-bridge-tablet-photo@1x.webp 1x, img/devils-bridge-tablet-photo@2x.webp 2x" width="324" height="267">
+              <source type="image/webp" srcset="img/devils-bridge-mobile-photo@1x.webp 1x, img/devils-bridge-mobile-photo@2x.webp 2x" width="280" height="280">
+              <source media="(min-width: 1200px)" srcset="img/devils-bridge-desktop-photo@1x.jpg 1x, img/devils-bridge-desktop-photo@2x.jpg 2x" width="400" height="267">
+              <source media="(min-width: 768px)" srcset="img/devils-bridge-tablet-photo@1x.jpg 1x, img/devils-bridge-tablet-photo@2x.jpg 2x" width="324" height="267">
+              <img class="main-gallery__image" src="img/devils-bridge-mobile-photo@1x.jpg" srcset="img/devils-bridge-mobile-photo@2x.jpg" alt="devil's bridge" width="280" height="280">
             </picture>
-            <b class="main-gallery__item__caption">Devil's Bridge</b>
-            <span class="main-gallery__item__description">Photo author: Anton</span>
-            <div class="main-gallery__item__likes-counter">
-              <button class="main-gallery__item__button" type="button">
-                <svg>
-                  <use></use>
-                </svg>
-              </button>
-              <span class="main-gallery__item__counter-value">254</span>
+            <div class="main-gallery__item__image-description-wrapper main-gallery__item__image-description-wrapper--next-item-width">
+              <div class="main-gallery__item__text-wrapper">
+                <b class="main-gallery__item__caption">Devil's Bridge</b>
+                <span class="main-gallery__item__description">Photo author: Anton</span>
+              </div>
+              <div class="main-gallery__item__likes-counter">
+                <button class="main-gallery__item__button" type="button">
+                  <svg class="main-gallery__item__button-icon" width="23" height="21">
+                    <use href="img/sprite.svg#like-icon"></use>
+                  </svg>
+                </button>
+                <span class="main-gallery__item__counter-value">254</span>
+              </div>
             </div>
           </li>
         </ul>
       </section>
-      <section class="video-presentation">
+      <section class="video-presentation container">
         <div class="video-presentation__slogan">
           <h2 class="video-presentation__title video-presentation__title--big-size">Still in doubt?</h2>
           <p class="video-presentation__description">Watch the video presentation and get tickets soon, before they go up in price once again!</p>
         </div>
+        <div class="video-presentation__player">
+          <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x" width="800" height="500">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x" width="648" height="500">
+            <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x" width="320" height="200">
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x" width="800" height="500">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x" width="648" height="500">
+            <img class="video-presentation__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg" alt="video about Sedona city" width="320" height="200">
+          </picture>
+          <div class="video-presentation__video-bar">
+            <div class="video-presentation__range-control">
+              <div class="video-presentation__scale" tabindex="0">
+                <div class="video-presentation__bar"></div>
+              </div>
+            </div>
+            <div class="video-presentation__button-bar">
+              <svg class="video-presentation__replay" tabindex="0" width="16" height="20">
+                <use href="img/sprite.svg#replay"></use>
+              </svg>
+              <svg class="video-presentation__subtitles" tabindex="0" width="32" height="20">
+                <use href="img/sprite.svg#subtitles"></use>
+              </svg>
+              <svg class="video-presentation__fullscreen" tabindex="0" width="20" height="20">
+                <use href="img/sprite.svg#fullscreen"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+    <footer class="main-footer container">
+      <a class="main-footer__link" href="index.html">
+        <b class="main-footer__link__site-link">#visitSEDONA</b>
+      </a>
+      <ul class="main-footer__social-list">
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:twitter.com">
+            <span class="visually-hidden">twitter</span>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#twitter-logo"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:facebook.com">
+            <span class="visually-hidden">facebook</span>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#facebook-logo"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="main-footer__social-item">
+          <a class="main-footer__social-link" href="https:youtube.com">
+            <span class="visually-hidden">youtube</span>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#youtube-logo"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <a class="main-footer__developer" href="https:htmlacademy.ru">
+        <span class="visually-hidden">Разработано HTML Academy</span>
+        <span class="main-footer__developer-description">Разработано</span>
+        <svg class="main-footer__developer-logo" width="27" height="34">
+          <use href="img/sprite.svg#htmlacademy-logo"></use>
+        </svg>
+      </a>
+    </footer>
 </body>
 </html>
