--- a/source/index.html
+++ b/source/index.html
@@ -140,46 +140,45 @@
         </div>
         <div class="main-modal-search__search-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462057.4134430642!2d-111.86765825890201!3d34.777645103840655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1642448949141!5m2!1sru!2sru" width="100%" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462057.4134430642!2d-111.86765825890201!3d34.777645103840655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1642448949141!5m2!1sru!2sru" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </section>
     </main>
-    <footer class="main-footer">
-      <a class="main-footer__link">
-        <svg>
-          <use></use>
-        </svg>
+    <footer class="main-footer container">
+      <a class="main-footer__link" href="index.html">
+        <b class="main-footer__link__site-link">#visitSEDONA</b>
       </a>
       <ul class="main-footer__social-list">
         <li class="main-footer__social-item">
           <a class="main-footer__social-link" href="https:twitter.com">
             <span class="visually-hidden">twitter</span>
-            <svg>
-              <use></use>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#twitter-logo"></use>
             </svg>
           </a>
         </li>
         <li class="main-footer__social-item">
           <a class="main-footer__social-link" href="https:facebook.com">
             <span class="visually-hidden">facebook</span>
-            <svg>
-              <use></use>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#facebook-logo"></use>
             </svg>
           </a>
         </li>
         <li class="main-footer__social-item">
           <a class="main-footer__social-link" href="https:youtube.com">
             <span class="visually-hidden">youtube</span>
-            <svg>
-              <use></use>
+            <svg class="main-footer__social-link__logo" width="46" height="48">
+              <use href="img/sprite.svg#youtube-logo"></use>
             </svg>
           </a>
         </li>
       </ul>
       <a class="main-footer__developer" href="https:htmlacademy.ru">
-        <span class="visually-hidden">HTML Academy</span>
-        <svg>
-          <use></use>
+        <span class="visually-hidden">Разработано HTML Academy</span>
+        <span class="main-footer__developer-description">Разработано</span>
+        <svg class="main-footer__developer-logo" width="27" height="34">
+          <use href="img/sprite.svg#htmlacademy-logo"></use>
         </svg>
       </a>
     </footer>
