--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
     <title>Sedona</title>
   </head>
   <body class="page">
@@ -42,12 +43,11 @@
         <h1 class="visually-hidden">Web-service for booking hotels in Sedona city</h1>
         <div class="main-offer__slogan__wrapper">
           <picture>
-            <source media="(min-width: 768px)" srcset="/img/main-slogan-tablet@1x.png 1x, /img/main-slogan-tablet@2x.png 2x">
-            <img class="main-offer__slogan" src="/img/main-slogan-mobile@1x.png" srcset="/img/main-slogan-mobile@2x.png" alt="">
+            <source type="image/webp" srcset="img/main-slogan-tablet@1x.webp 1x, img/main-slogan-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/main-slogan-mobile@1x.webp 1x, img/main-slogan-mobile@2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/main-slogan-tablet@1x.png 1x, img/main-slogan-tablet@2x.png 2x">
+            <img class="main-offer__slogan" src="img/main-slogan-mobile@1x.png" srcset="img/main-slogan-mobile@2x.png" alt="">
           </picture>
-          <svg class="main-offer--decore" width="100%" height="57">
-            <use href="/img/sprite.svg"></use>
-          </svg>
         </div>
         <div class="main-offer__wrapper">
           <h2 class="main-offer__title">Sedona is a small city in Arizona that deserve more!</h2>
@@ -68,9 +68,12 @@
                 </p>
               </div>
               <picture>
-                <source media="(min-width: 1200px)" srcset="/img/city-photo-desktop@1x.jpg 1x, /img/city-photo-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="/img/city-photo-tablet@1x.jpg 1x, /img/city-photo-tablet@2x.jpg 2x">
-                <img class="main-features__city-image" src="/img/city-photo-mobile@1x.jpg" srcset="/img/city-photo-mobile@2x.jpg" alt="Sedona's city photo">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/city-photo-desktop@1x.webp 1x, img/city-photo-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/city-photo-tablet@1x.webp 1x, img/city-photo-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/city-photo-mobile@1x.webp 1x, img/city-photo-mobile@2x.webp 2x">
+                <source media="(min-width: 1200px)" srcset="img/city-photo-desktop@1x.jpg 1x, img/city-photo-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/city-photo-tablet@1x.jpg 1x, img/city-photo-tablet@2x.jpg 2x">
+                <img class="main-features__city-image" src="img/city-photo-mobile@1x.jpg" srcset="img/city-photo-mobile@2x.jpg" alt="Sedona's city photo">
               </picture>
             </li>
             <li class="main-features__item main-features__item--additional-item main-features__item--house-logo">
@@ -100,6 +103,9 @@
                 </p>
               </div>
               <picture>
+                <source type="image/webp" srcset="img/bridge-photo-desktop@1x.webp 1x, img/bridge-photo-desktop@2x.webp 2x">
+                <source type="image/webp" srcset="img/bridge-photo-tablet@1x.webp 1x, img/bridge-photo-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/bridge-photo-mobile@1x.webp 1x, img/bridge-photo-mobile@2x.webp">
                 <source media="(min-width: 1200px)" srcset="img/bridge-photo-desktop@1x.jpg 1x, img/bridge-photo-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/bridge-photo-tablet@1x.jpg 1x, img/bridge-photo-tablet@2x.jpg 2x">
                 <img class="main-features__city-image" src="img/bridge-photo-mobile@1x.jpg" srcset="img/bridge-photo-mobile@2x.jpg" alt="Devil's bridge photo">
@@ -138,9 +144,8 @@
           </p>
           <button class="main-modal-search__search-button button" type="button">Find hotel</button>
         </div>
-        <div class="main-modal-search__search-map">
+        <div class="main-modal-search__search-map" id="search-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462057.4134430642!2d-111.86765825890201!3d34.777645103840655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1642448949141!5m2!1sru!2sru" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </section>
     </main>
@@ -150,7 +155,7 @@
       </a>
       <ul class="main-footer__social-list">
         <li class="main-footer__social-item">
-          <a class="main-footer__social-link" href="https:twitter.com">
+          <a class="main-footer__social-link" href="https://twitter.com/hashtag/sedona?src=hashtag_click">
             <span class="visually-hidden">twitter</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
               <use href="img/sprite.svg#twitter-logo"></use>
@@ -158,7 +163,7 @@
           </a>
         </li>
         <li class="main-footer__social-item">
-          <a class="main-footer__social-link" href="https:facebook.com">
+          <a class="main-footer__social-link" href="https://www.facebook.com/VisitSedona">
             <span class="visually-hidden">facebook</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
               <use href="img/sprite.svg#facebook-logo"></use>
@@ -166,7 +171,7 @@
           </a>
         </li>
         <li class="main-footer__social-item">
-          <a class="main-footer__social-link" href="https:youtube.com">
+          <a class="main-footer__social-link" href="https://www.youtube.com/watch?v=JzJA5xzN0QE&ab_channel=%D0%9C%D0%BE%D0%B9%D0%A1%D0%B8%D1%8D%D1%82%D0%BB">
             <span class="visually-hidden">youtube</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
               <use href="img/sprite.svg#youtube-logo"></use>
@@ -182,5 +187,9 @@
         </svg>
       </a>
     </footer>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+      crossorigin=""></script>
+    <script src="js/map.js" type="module" defer></script>
   </body>
 </html>
