--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
         <source media="(min-width: 1200px)" srcset="img/main-logo-desktop@1x.png 1x, img/main-logo-desktop@2x.png 2x" width="186" height="96">
         <img class="header-logo" src="img/main-logo-mobile@1x.png" srcset="img/main-logo-mobile@2x.png" alt="Sedona's logotype" width="101" height="84">
       </picture>
-      <button class="page-header__main-navigation__button-open" type="button">
+      <button class="page-header__main-navigation__button-open button-disable" type="button">
         <span class="visually-hidden">Open menu</span>
       </button>
       <nav class="page-header__main-navigation main-navigation--closed main-navigation--nojs">
@@ -142,7 +142,7 @@
               </div>
               <div class="main-gallery__item__likes-counter">
                 <button class="main-gallery__item__button" type="button">
-                  <svg class="main-gallery__item__button-icon" width="23" height="21">
+                  <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
                     <use href="img/sprite.svg#like-icon"></use>
                   </svg>
                 </button>
@@ -225,5 +225,7 @@
         </svg>
       </a>
     </footer>
+  <script src="js/navigation.js"></script>
+  <script src="js/likes-counter.js"></script>
 </body>
 </html>
