--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
         <source media="(min-width: 768px)" srcset="img/main-logo-tablet@1x.png 1x, img/main-logo-tablet@2x.png 2x">
         <img class="header-logo" src="img/main-logo-mobile@1x.png" srcset="img/main-logo-mobile@2x.png" alt="Sedona's logotype">
       </picture>
-      <button class="page-header__main-navigation__button-open" type="button">
+      <button class="page-header__main-navigation__button-open button-disable" type="button">
         <span class="visually-hidden">Open menu</span>
       </button>
       <nav class="page-header__main-navigation main-navigation--closed main-navigation--nojs">
@@ -190,6 +190,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""></script>
-    <script src="js/map.js" type="module" defer></script>
+    <script src="js/map.js"></script>
+    <script src="js/navigation.js"></script>
   </body>
 </html>
