--- a/source/form.html
+++ b/source/form.html
@@ -61,7 +61,7 @@
             <ul class="feedback-form__contact-list">
               <li class="feedback-form__contact-item">
                 <label class="feedback-form__label" for="phone-number">Phone:*</label>
-                <input class="feedback-form__input feedback-form__input--logo feedback-form__input--phone-logo" type="number" name="phone" id="phone-number" placeholder="Enter your phone" minlength="11" required>
+                <input class="feedback-form__input feedback-form__input--logo feedback-form__input--phone-logo" type="tel" name="phone" id="phone-number" placeholder="X-XXX-XXX-XX-XX" minlength="11" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
               </li>
               <li class="feedback-form__contact-item">
                 <label class="feedback-form__label" for="e-mail">E-mail:*</label>
