added gh-pages in devDependencies

--- a/source/index.html
+++ b/source/index.html
@@ -147,6 +147,12 @@
         <div class="main-modal-search__search-map" id="search-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
         </div>
+        <div class="modal visually-hidden">
+          <label for="">Дата заезда:</label>
+          <input type="text">
+          <label for="">Дата выезда:</label>
+          <input type="text">
+        </div>
       </section>
     </main>
     <footer class="main-footer container">
