created mocks data

--- a/source/index.html
+++ b/source/index.html
@@ -142,7 +142,7 @@
           <p class="main-modal-search__search-description">
             Specify the estimated dates of your trip, and we will show you the best hotel deals in Sedona
           </p>
-          <button class="main-modal-search__search-button button" type="button">Find hotel</button>
+          <a class="main-modal-search__search-button button" href="hotels.html">Find hotel</a>
         </div>
         <div class="main-modal-search__search-map" id="search-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
