--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,7 +71,7 @@
               <div class="main-gallery__item__likes-counter">
                 <button class="main-gallery__item__button" type="button">
                   <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
-                    <use href="img/sprite.svg#like-icon"></use>
+                    <use href="img/icons/stack.svg#like-icon"></use>
                   </svg>
                 </button>
                 <span class="main-gallery__item__counter-value">1350</span>
@@ -95,7 +95,7 @@
               <div class="main-gallery__item__likes-counter">
                 <button class="main-gallery__item__button" type="button">
                   <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
-                    <use href="img/sprite.svg#like-icon"></use>
+                    <use href="img/icons/stack.svg#like-icon"></use>
                   </svg>
                 </button>
                 <span class="main-gallery__item__counter-value">143</span>
@@ -119,7 +119,7 @@
               <div class="main-gallery__item__likes-counter">
                 <button class="main-gallery__item__button" type="button">
                   <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
-                    <use href="img/sprite.svg#like-icon"></use>
+                    <use href="img/icons/stack.svg#like-icon"></use>
                   </svg>
                 </button>
                 <span class="main-gallery__item__counter-value">96</span>
@@ -143,7 +143,7 @@
               <div class="main-gallery__item__likes-counter">
                 <button class="main-gallery__item__button" type="button">
                   <svg class="main-gallery__item__button-icon" width="23" height="21" tabindex="0">
-                    <use href="img/sprite.svg#like-icon"></use>
+                    <use href="img/icons/stack.svg#like-icon"></use>
                   </svg>
                 </button>
                 <span class="main-gallery__item__counter-value">254</span>
@@ -171,7 +171,7 @@
           <a class="main-footer__social-link" href="https:twitter.com">
             <span class="visually-hidden">twitter</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#twitter-logo"></use>
+              <use href="img/icons/stack.svg#twitter-logo"></use>
             </svg>
           </a>
         </li>
@@ -179,7 +179,7 @@
           <a class="main-footer__social-link" href="https:facebook.com">
             <span class="visually-hidden">facebook</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#facebook-logo"></use>
+              <use href="img/icons/stack.svg#facebook-logo"></use>
             </svg>
           </a>
         </li>
@@ -187,7 +187,7 @@
           <a class="main-footer__social-link" href="https:youtube.com">
             <span class="visually-hidden">youtube</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#youtube-logo"></use>
+              <use href="img/icons/stack.svg#youtube-logo"></use>
             </svg>
           </a>
         </li>
@@ -196,7 +196,7 @@
         <span class="visually-hidden">Разработано HTML Academy</span>
         <span class="main-footer__developer-description">Разработано</span>
         <svg class="main-footer__developer-logo" width="27" height="34">
-          <use href="img/sprite.svg#htmlacademy-logo"></use>
+          <use href="img/icons/stack.svg#htmlacademy-logo"></use>
         </svg>
       </a>
     </footer>
