--- a/source/form.html
+++ b/source/form.html
@@ -143,7 +143,7 @@
           <a class="main-footer__social-link" href="https:twitter.com">
             <span class="visually-hidden">twitter</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#twitter-logo"></use>
+              <use href="img/icons/stack.svg#twitter-logo"></use>
             </svg>
           </a>
         </li>
@@ -151,7 +151,7 @@
           <a class="main-footer__social-link" href="https:facebook.com">
             <span class="visually-hidden">facebook</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#facebook-logo"></use>
+              <use href="img/icons/stack.svg#facebook-logo"></use>
             </svg>
           </a>
         </li>
@@ -159,7 +159,7 @@
           <a class="main-footer__social-link" href="https:youtube.com">
             <span class="visually-hidden">youtube</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#youtube-logo"></use>
+              <use href="img/icons/stack.svg#youtube-logo"></use>
             </svg>
           </a>
         </li>
@@ -168,7 +168,7 @@
         <span class="visually-hidden">Разработано HTML Academy</span>
         <span class="main-footer__developer-description">Разработано</span>
         <svg class="main-footer__developer-logo" width="27" height="34">
-          <use href="img/sprite.svg#htmlacademy-logo"></use>
+          <use href="img/icons/stack.svg#htmlacademy-logo"></use>
         </svg>
       </a>
     </footer>
