--- a/source/index.html
+++ b/source/index.html
@@ -164,7 +164,7 @@
           <a class="main-footer__social-link" href="https://twitter.com/hashtag/sedona?src=hashtag_click">
             <span class="visually-hidden">twitter</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#twitter-logo"></use>
+              <use href="img/icons/stack.svg#twitter-logo"></use>
             </svg>
           </a>
         </li>
@@ -172,7 +172,7 @@
           <a class="main-footer__social-link" href="https://www.facebook.com/VisitSedona">
             <span class="visually-hidden">facebook</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#facebook-logo"></use>
+              <use href="img/icons/stack.svg#facebook-logo"></use>
             </svg>
           </a>
         </li>
@@ -180,7 +180,7 @@
           <a class="main-footer__social-link" href="https://www.youtube.com/watch?v=JzJA5xzN0QE&ab_channel=%D0%9C%D0%BE%D0%B9%D0%A1%D0%B8%D1%8D%D1%82%D0%BB">
             <span class="visually-hidden">youtube</span>
             <svg class="main-footer__social-link__logo" width="46" height="48">
-              <use href="img/sprite.svg#youtube-logo"></use>
+              <use href="img/icons/stack.svg#youtube-logo"></use>
             </svg>
           </a>
         </li>
@@ -189,7 +189,7 @@
         <span class="visually-hidden">Разработано HTML Academy</span>
         <span class="main-footer__developer-description">Разработано</span>
         <svg class="main-footer__developer-logo" width="27" height="34">
-          <use href="img/sprite.svg#htmlacademy-logo"></use>
+          <use href="img/icons/stack.svg#htmlacademy-logo"></use>
         </svg>
       </a>
     </footer>
