--- a/source/catalog.html
+++ b/source/catalog.html
@@ -200,7 +200,6 @@
         </svg>
       </a>
     </footer>
-  <script src="js/navigation.js"></script>
-  <script src="js/likes-counter.js"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
