--- a/source/form.html
+++ b/source/form.html
@@ -172,7 +172,6 @@
         </svg>
       </a>
     </footer>
-    <script src="js/navigation.js"></script>
-    <script src="js/form.js"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
