--- a/source/index.html
+++ b/source/index.html
@@ -145,13 +145,7 @@
           <a class="main-modal-search__search-button button" href="hotels.html">Find hotel</a>
         </div>
         <div class="main-modal-search__search-map" id="search-map">
-          <h2 class="visually-hidden">Как до нас добраться</h2>
-        </div>
-        <div class="modal visually-hidden">
-          <label for="">Дата заезда:</label>
-          <input type="text">
-          <label for="">Дата выезда:</label>
-          <input type="text">
+          <h2 class="visually-hidden">How we can find us</h2>
         </div>
       </section>
     </main>
